--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/app.css">
+    <link rel="stylesheet" href="styles/button.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
@@ -20,8 +21,8 @@
                 <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">This Blog For Everyone</h1>
                 <p class="lead my-5">There is an article for everyone here. It is possible to write a post without being a user and logging in, just by entering your name information. What is important is not identity, but thoughts...</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start my-5">
-                  <a href="/write"><button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Write Something...</button></a>
-                 <a href="/posts"><button  type="button" class="btn btn-outline-secondary btn-lg px-4">See Others Posts</button></a>
+                  <a href="/write"><button type="button" class="btn btn-dark btn-two">Write Something...</button></a>
+                 <a href="/posts"><button  type="button" class="btn btn-light btn-two">See Others Posts</button></a>
                 </div>
               </div>
             </div>
