--- a/views/posting.ejs
+++ b/views/posting.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/app.css">
+    <link rel="stylesheet" href="styles/button.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
@@ -45,6 +46,9 @@
             <div class="form-group my-4">
               <label for="exampleFormControlTextarea1" class="my-2"><span style="font-weight: bold; font-size: larger;">Blog Content : </span></label>
               <textarea type="text" class="form-control" rows="5" placeholder="What are your thoughts?"></textarea>
+            </div>
+            <div class="d-flex justify-content-center my-4">
+              <button type="button" class="btn btn-dark btn-two" data-toggle="button" >Submit</button>
             </div>
         </form>
       </div>
