--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -5,72 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/button.css">
+    <link rel="stylesheet" href="styles/app.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
     <%- include("partials/header.ejs") %>
     <div class="posts-container bg-light">
 
-      <div class="row d-flex justify-content-center">
-        <div class="col-md-4 mt-4">
-          <div class="card mb-4 box-shadow">
-            <img class="card-img-top" src="images/posts/vacation.png" height="300" >
-            <div class="card-body">
-              <p class="card-text"><span style="font-weight: bold;">My Last Vacation</span></p>
-              <div class="d-flex justify-content-center align-items-center">
-                <small class="text-muted">x Min Reading</small>  
-                <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                  <button type="button" class="btn btn-dark btn-two mx-3" style="width: 125px; height: 40px;">Read</button>
-                  <button type="button" class="btn btn-secondary btn-two mx-3" style="width: 125px; height: 40px;">Edit</button>
+      <%if ( locals.array.length != 0 ) { %>
+        <% for( let index = 0; index <= locals.index ; index++ ) { %>
+          <div class="row d-flex justify-content-center">
+            <div class="col-md-4 mt-4">
+              <div class="card mb-4 box-shadow">
+                <div class="card-body">
+                  <p class="card-text"><span style="font-weight: bold;"><%= locals.array[index].userName %></span></p>
+                  <p class="card-text"><span style="font-weight: bold;"><%= locals.array[index].title %></span></p>
+                  <p class="text-muted"><%= locals.array[index].oneline %></p>
+                  <div class="d-flex justify-content-center align-items-center">
+                    <small class="text-muted"><%= locals.array[index].min %> Min Reading</small>  
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                      <a href="/details"><button type="button" class="btn btn-dark btn-two mx-3" style="width: 125px; height: 40px;" id="read">Read</button></a>
+                      <a href="/details"><button type="button" class="btn btn-secondary btn-two mx-3" style="width: 125px; height: 40px;">Edit</button></a>
+                    </div>
+                  </div>
                 </div>
-                
               </div>
             </div>
           </div>
-        </div>
-      </div>
-
-      <div class="row d-flex justify-content-center">
-        <div class="col-md-4 mt-4">
-          <div class="card mb-4 box-shadow">
-            <img class="card-img-top" src="images/posts/friendship.png" height="300" >
-            <div class="card-body">
-              <p class="card-text"><span style="font-weight: bold;">Strong Friendship</span></p>
-              <div class="d-flex justify-content-center align-items-center">
-                <small class="text-muted">x Min Reading</small>  
-                <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                  <button type="button" class="btn btn-dark btn-two mx-3" style="width: 125px; height: 40px;">Read</button>
-                  <button type="button" class="btn btn-secondary btn-two mx-3" style="width: 125px; height: 40px;">Edit</button>
-                </div>
-                
-              </div>
+        <% } %>
+      <% } else { %>
+        <div class="px-4 pt-5 my-5 text-center border-bottom py-5">
+          <h1 class="display-4 fw-bold text-body-emphasis my-5">There is no posts yet &#128546;</h1>
+          <div class="overflow-hidden" style="max-height: 30vh;">
+            <div class="container px-5">
+              <img src="images/posts/sad.jpg" class="d-block mx-lg-auto img-fluid home-image" width="700" height="500">
             </div>
           </div>
         </div>
-      </div>
-
-      <div class="row d-flex justify-content-center">
-        <div class="col-md-4 mt-4">
-          <div class="card mb-4 box-shadow">
-            <img class="card-img-top" src="images/posts/college.png" height="300" >
-            <div class="card-body">
-              <p class="card-text"><span style="font-weight: bold;">Being a College Student</span></p>
-              <div class="d-flex justify-content-center align-items-center">
-                <small class="text-muted">x Min Reading</small>  
-                <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                  <button type="button" class="btn btn-dark btn-two mx-3" style="width: 125px; height: 40px;">Read</button>
-                  <button type="button" class="btn btn-secondary btn-two mx-3" style="width: 125px; height: 40px;">Edit</button>
-                </div>
-                
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      
-
+      <% } %>
     </div>
+
+    <hr class="hr-style">
     
 </body>
+<%- include("partials/footer.ejs") %>
 </html>
