Edit post detail page

--- a/views/posting.ejs
+++ b/views/posting.ejs
@@ -44,8 +44,7 @@
               <textarea type="text" class="form-control" name="content" rows="5" placeholder="What are your thoughts?"></textarea>
             </div>
             <div class="d-flex justify-content-center my-4">  
-              <input type="submit" value="OK" class="btn btn-dark btn-two">
-              <button type="button" class="btn btn-dark btn-two" data-toggle="button">Submit</button>
+              <input type="submit" value="Submit" class="btn btn-dark btn-two">
             </div>
         </form>
       </div>
