--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -13,18 +13,21 @@
     <div class="posts-container bg-light">
 
       <%if ( locals.array.length != 0 ) { %>
-        <% for( let index = 0; index <= locals.index ; index++ ) { %>
+        <% for( let index = locals.index ; index >= 0 ; index-- ) { %>
           <div class="row d-flex justify-content-center">
             <div class="col-md-4 mt-4">
               <div class="card mb-4 box-shadow">
                 <div class="card-body">
-                  <p class="card-text"><span style="font-weight: bold;"><%= locals.array[index].userName %></span></p>
+                  <div class="d-flex">
+                    <p class="card-text"><span style="font-weight: bold;"><%= locals.array[index].userName %></span></p>
+                    <small class="text-muted" style="margin-left: auto;"><%= locals.date %></small>  
+                  </div>
                   <p class="card-text"><span style="font-weight: bold;"><%= locals.array[index].title %></span></p>
                   <p class="text-muted"><%= locals.array[index].oneline %></p>
                   <div class="d-flex justify-content-center align-items-center">
                     <small class="text-muted"><%= locals.array[index].min %> Min Reading</small>  
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                      <a href="/details"><button type="button" class="btn btn-dark btn-two mx-3" style="width: 125px; height: 40px;" id="read">Read</button></a>
+                      <a href="/details?index=<%= index %>"><button type="button" class="btn btn-dark btn-two mx-3" style="width: 125px; height: 40px;">Read</button></a>
                       <a href="/details"><button type="button" class="btn btn-secondary btn-two mx-3" style="width: 125px; height: 40px;">Edit</button></a>
                     </div>
                   </div>
