Add search feature

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,8 +14,8 @@
 
         
         <!-- Seraching based on the heading of posts -->
-        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-          <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
+        <form action="/search" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+          <input type="search" class="form-control form-control-dark" name="query" placeholder="Search..." aria-label="Search">
         </form>
 
       </div>
