--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -37,7 +37,7 @@
         <% } %>
       <% } else { %>
         <div class="px-4 pt-5 my-5 text-center border-bottom py-5">
-          <h1 class="display-4 fw-bold text-body-emphasis my-5">There is no posts yet &#128546;</h1>
+          <h1 class="display-4 fw-bold text-body-emphasis my-5">There is no post &#128546;</h1>
           <div class="overflow-hidden" style="max-height: 30vh;">
             <div class="container px-5">
               <img src="images/posts/sad.jpg" class="d-block mx-lg-auto img-fluid home-image" width="700" height="500">
